--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Babel for JSX -->
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   </head>
-  <body class="bg-blue-500 flex items-center justify-center min-h-screen">
+  <body class="bg-gray-100 flex items-center justify-center min-h-screen">
     <div id="root"></div>
 
     <script type="text/babel">
@@ -37,7 +37,7 @@
 
         const renderSquare = (index) => (
           <button
-            className="w-20 h-20 border text-3xl font-bold flex items-center justify-center bg-black text-white"
+            className="w-20 h-20 border text-3xl font-bold flex items-center justify-center"
             onClick={() => handleClick(index)}
           >
             {board[index]}
@@ -45,14 +45,14 @@
         );
 
         return (
-          <div className="flex flex-col items-center bg-black p-6 rounded-xl shadow-lg">
-            <h1 className="text-3xl font-bold mb-4 text-white">Tic Tac Toe</h1>
-            <div className="mb-2 text-xl text-white">{status}</div>
+          <div className="flex flex-col items-center">
+            <h1 className="text-3xl font-bold mb-4">Tic Tac Toe</h1>
+            <div className="mb-2 text-xl">{status}</div>
             <div className="grid grid-cols-3 gap-1">
               {board.map((_, i) => renderSquare(i))}
             </div>
             <button
-              className="mt-4 px-4 py-2 bg-blue-700 text-white rounded hover:bg-blue-800"
+              className="mt-4 px-4 py-2 bg-blue-500 text-white rounded hover:bg-blue-600"
               onClick={() => {
                 setBoard(Array(9).fill(null));
                 setXIsNext(true);
